--- a/css/about.css
+++ b/css/about.css
@@ -43,7 +43,7 @@
   transition: all 1s ease 1s;
 }
 .text-wrap textarea {
-  font-family: "Roboto", serif;
+  font-family: "Roboto", "Pretendard", serif;
   font-weight: 300;
   width: 100%;
   height: 500px;
@@ -58,7 +58,7 @@
 .about-wrap p {
   font-size: 1.3rem;
   line-height: 2;
-  font-family: "Libre Baskerville", serif;
+  font-family: "Libre Baskerville", "Pretendard", serif;
   transform: translateY(30px);
 }
 .about-wrap p b,
