fix: 모바일 대응 버그 수정

--- a/css/about.css
+++ b/css/about.css
@@ -65,6 +65,10 @@
 .about-wrap p a {
   color: var(--blue);
 }
+.about-wrap.kor textarea,
+.about-wrap.kor p {
+  font-family: "Pretendard", sans-serif;
+}
 
 @keyframes slidein {
   from {
