--- a/css/common.css
+++ b/css/common.css
@@ -572,3 +572,20 @@ i.result-temp-bg {
 .result-wrap .download a .btn {
   margin: 0;
 }
+
+.app-move {
+  position: relative;
+  top: 0;
+  left: 10px;
+  width: 16px;
+  height: 28px;
+  background: var(--blue) url('../images/drag.svg') no-repeat center/100%;
+  z-index: 2;
+  border-radius: 3px;
+}
+.app-move:hover {
+  cursor: grab;
+}
+.app-move:active {
+  cursor: grabbing;
+}
