--- a/css/common.css
+++ b/css/common.css
@@ -410,20 +410,16 @@ input::-ms-input-placeholder {
 input::placeholder {
   font-size: 13px;
 }
-textarea:focus::-webkit-input-placeholder,
-input:focus::-webkit-input-placeholder {
+textarea:focus::-webkit-input-placeholder, input:focus::-webkit-input-placeholder {
   opacity: 0;
 }
-textarea:focus::-moz-placeholder,
-input:focus::-moz-placeholder {
+textarea:focus::-moz-placeholder, input:focus::-moz-placeholder {
   opacity: 0;
 }
-textarea:focus:-ms-input-placeholder,
-input:focus:-ms-input-placeholder {
+textarea:focus:-ms-input-placeholder, input:focus:-ms-input-placeholder {
   opacity: 0;
 }
-textarea:focus::-ms-input-placeholder,
-input:focus::-ms-input-placeholder {
+textarea:focus::-ms-input-placeholder, input:focus::-ms-input-placeholder {
   opacity: 0;
 }
 textarea:focus::placeholder,
@@ -584,8 +580,10 @@ i.result-temp-bg {
   border-radius: 3px;
 }
 .app-move:hover {
+  cursor: -webkit-grab;
   cursor: grab;
 }
 .app-move:active {
+  cursor: -webkit-grabbing;
   cursor: grabbing;
 }
