--- a/css/common.css
+++ b/css/common.css
@@ -1,4 +1,3 @@
-@import "reset.css";
 @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.6/dist/web/variable/pretendardvariable-dynamic-subset.css");
 @import url("https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Arima:wght@300;400;700&family=Arizonia&family=Black+Han+Sans&family=Black+Ops+One&family=Blaka+Hollow&family=Bodoni+Moda:ital,opsz@1,6..96&family=Bungee&family=Bungee+Shade&family=Carter+One&family=Cinzel+Decorative:wght@400;700&family=Creepster&family=DM+Serif+Display&family=DM+Serif+Text&family=EB+Garamond:wght@400;700&family=Fredericka+the+Great&family=Graduate&family=Gruppo&family=Hammersmith+One&family=Italianno&family=Kelly+Slab&family=Kodchasan:wght@300;400;700&family=Libre+Baskerville:wght@400;700&family=Limelight&family=Lobster+Two:wght@400;700&family=Monoton&family=Montserrat+Alternates:wght@300;400;700&family=Montserrat+Subrayada&family=Montserrat:wght@300;400;700;900&family=Nixie+One&family=Oleo+Script&family=Oranienbaum&family=Oswald:wght@300;400;700&family=Pacifico&family=Padyakke+Expanded+One&family=Pirata+One&family=Poiret+One&family=Press+Start+2P&family=Quicksand:wght@300;400;700&family=Rampart+One&family=Roboto:wght@300;400;700&family=Rubik+Gemstones&family=Rubik+Vinyl&family=Sen:wght@400;700&family=Stalemate&family=Tenor+Sans&family=Tilt+Prism&family=Waterfall&family=Yesteryear&display=swap");
 @font-face {
@@ -157,8 +156,6 @@ nav {
   opacity: 0;
   background: rgba(255, 255, 255, 0.5);
   -webkit-backdrop-filter: saturate(180%) blur(15px);
-  -moz-backdrop-filter: saturate(180%) blur(15px);
-  -o-backdrop-filter: saturate(180%) blur(15px);
   backdrop-filter: saturate(180%) blur(15px);
 }
 nav.show {
@@ -340,14 +337,14 @@ footer p a {
   background-color: var(--blue);
   border: none;
   border-radius: 50px;
-  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
   transition: all 0.3s ease-in-out;
   cursor: pointer;
   z-index: 2;
 }
 .btn:hover {
   background-color: #fff;
-  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.7);
+  box-shadow: 0 8px 15px rgba(0, 0, 0, 0.7);
   transform: translateY(-2px);
   color: var(--blue);
 }
@@ -583,10 +580,8 @@ i.result-temp-bg {
   border-radius: 3px;
 }
 .app-move:hover {
-  cursor: -webkit-grab;
   cursor: grab;
 }
 .app-move:active {
-  cursor: -webkit-grabbing;
   cursor: grabbing;
 }
