--- a/css/app1.css
+++ b/css/app1.css
@@ -101,14 +101,17 @@
   cursor: pointer; /* Safari */
   transition: all 0.5s;
 }
-.weather-icon-wrap li svg {
+.weather-icon-wrap li img {
   width: 100%;
   height: 100%;
   fill: white;
   -webkit-filter: drop-shadow(0 1px 2px rgb(0 0 0 / 0.4));
           filter: drop-shadow(0 1px 2px rgb(0 0 0 / 0.4));
 }
-.weather-icon-wrap li:hover svg {
-  fill: var(--blue);
+.weather-icon-wrap li:hover img {
+  transform: scale(1.2);
+}
+.weather-icon-wrap li img.active {
+  filter: invert(50%) sepia(58%) saturate(4536%) hue-rotate(190deg) brightness(99%) contrast(105%);
   transform: scale(1.2);
 }
